Commit Currency and Customer

--- a/apps/Tasky.AuthServer/appsettings.json
+++ b/apps/Tasky.AuthServer/appsettings.json
@@ -2,14 +2,16 @@
   "App": {
     "SelfUrl": "https://localhost:7600",
     "ClientUrl": "http://localhost:4200",
-    "CorsOrigins": "http://localhost:4200,https://localhost:5000,http://localhost:3000,https://localhost:7001,https://localhost:7002,https://localhost:7003,https://localhost:7004,https://localhost:7005",
+    "CorsOrigins": "http://localhost:4200,https://localhost:5000,http://localhost:3000,https://localhost:7001,https://localhost:7002,https://localhost:7003,https://localhost:7004,https://localhost:7005,https://localhost:7005",
     "RedirectAllowedUrls": "http://localhost:4200,http://localhost:3000,https://localhost:7001"
   },
   "ConnectionStrings": {
     "SaaS": "Server=localhost;Database=TaskySaasService;Trusted_Connection=True;encrypt=false",
     "IdentityService": "Server=localhost;Database=TaskyIdentityService;Trusted_Connection=True;encrypt=false",
     "Administration": "Server=localhost;Database=TaskyAdministrationService;Trusted_Connection=True;encrypt=false",
-    "CurrencyService": "Server=localhost;Database=TaskyCurrencyService;Trusted_Connection=True;encrypt=false"
+    "CurrencyService": "Server=localhost;Database=TaskyCurrencyService;Trusted_Connection=True;encrypt=false",
+    "CustomerService": "Server=localhost;Database=TaskyCustomerService;Trusted_Connection=True;encrypt=false"
+
   },
   "Redis": {
     "Configuration": "127.0.0.1"
