--- a/gateway/Tasky.Gateway/appsettings.json
+++ b/gateway/Tasky.Gateway/appsettings.json
@@ -20,6 +20,12 @@
           "Path": "/api/currencyService/currency/{*any}"
         }
       },
+      "CustomerService": {
+        "ClusterId": "customer",
+        "Match": {
+          "Path": "/api/customerService/customer/{*any}"
+        }
+      },
       "identity": {
         "ClusterId": "identity",
         "Match": {
@@ -64,6 +70,13 @@
         "Destinations": {
           "currency": {
             "Address": "https://localhost:7005"
+          }
+        }
+      },
+      "customer": {
+        "Destinations": {
+          "customer": {
+            "Address": "https://localhost:7006"
           }
         }
       },
