--- a/shared/Tasky.DbMigrator/appsettings.json
+++ b/shared/Tasky.DbMigrator/appsettings.json
@@ -3,21 +3,24 @@
     "SaaS": "Server=localhost;Database=TaskySaasService;Trusted_Connection=True;encrypt=false",
     "IdentityService": "Server=localhost;Database=TaskyIdentityService;Trusted_Connection=True;encrypt=false",
     "Administration": "Server=localhost;Database=TaskyAdministrationService;Trusted_Connection=True;encrypt=false",
-    "CurrencyService": "Server=localhost;Database=TaskyCurrencyService;Trusted_Connection=True;encrypt=false"
+    "CurrencyService": "Server=localhost;Database=TaskyCurrencyService;Trusted_Connection=True;encrypt=false",
+    "CustomerService": "Server=localhost;Database=TaskyCustomerService;Trusted_Connection=True;encrypt=false"
   },
   "ApiScope": [
     "AuthServer",
     "SaasService",
     "IdentityService",
     "AdministrationService",
-    "CurrencyService"
+    "CurrencyService",
+    "CustomerService"
   ],
   "ApiResource": [
     "AuthServer",
     "SaasService",
     "IdentityService",
     "AdministrationService",
-    "CurrencyService"
+    "CurrencyService",
+    "CustomerService"
   ],
   "Clients": [
     {
@@ -30,7 +33,8 @@
         "SaasService",
         "IdentityService",
         "AdministrationService",
-        "CurrencyService"
+        "CurrencyService",
+        "CustomerService"
       ],
       "GrantTypes": [
         "hybrid"
@@ -54,7 +58,8 @@
         "SaasService",
         "IdentityService",
         "AdministrationService",
-        "CurrencyService"
+        "CurrencyService",
+        "CustomerService"
       ],
       "GrantTypes": [
         "authorization_code"
@@ -79,7 +84,8 @@
         "SaasService",
         "IdentityService",
         "AdministrationService",
-        "CurrencyService"
+        "CurrencyService",
+        "CustomerService"
       ],
       "GrantTypes": [
         "authorization_code"
@@ -104,7 +110,8 @@
         "SaasService",
         "IdentityService",
         "AdministrationService",
-        "CurrencyService"
+        "CurrencyService",
+        "CustomerService"
       ],
       "GrantTypes": [
         "authorization_code"
@@ -129,7 +136,8 @@
         "SaasService",
         "IdentityService",
         "AdministrationService",
-        "CurrencyService"
+        "CurrencyService",
+        "CustomerService"
       ],
       "GrantTypes": [
         "authorization_code"
@@ -154,7 +162,8 @@
         "SaasService",
         "IdentityService",
         "AdministrationService",
-        "CurrencyService"
+        "CurrencyService",
+        "CustomerService"
       ],
       "GrantTypes": [
         "authorization_code"
@@ -179,7 +188,8 @@
         "SaasService",
         "IdentityService",
         "AdministrationService",
-        "CurrencyService"
+        "CurrencyService",
+        "CustomerService"
       ],
       "GrantTypes": [
         "authorization_code"
@@ -192,6 +202,32 @@
       ],
       "AllowedCorsOrigins": [
         "https://localhost:7005"
+      ]
+    },
+    {
+      "ClientId": "CustomerService_Swagger",
+      "ClientSecret": "1q2w3e*",
+      "RootUrls": [
+        "https://localhost:7006"
+      ],
+      "Scopes": [
+        "SaasService",
+        "IdentityService",
+        "AdministrationService",
+        "CurrencyService",
+        "CustomerService"
+      ],
+      "GrantTypes": [
+        "authorization_code"
+      ],
+      "RedirectUris": [
+        "https://localhost:7006/swagger/oauth2-redirect.html"
+      ],
+      "PostLogoutRedirectUris": [
+        "https://localhost:7006"
+      ],
+      "AllowedCorsOrigins": [
+        "https://localhost:7006"
       ]
     }
   ]
