--- a/apps/Tasky.AuthServer/Tasky.AuthServer.csproj
+++ b/apps/Tasky.AuthServer/Tasky.AuthServer.csproj
@@ -57,6 +57,7 @@
     <PackageReference Include="Volo.Abp.Account.HttpApi" Version="7.0.2" />
     <ProjectReference Include="..\..\services\administration\src\Tasky.Administration.EntityFrameworkCore\Tasky.Administration.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\..\services\currency\src\Tasky.CurrencyService.EntityFrameworkCore\Tasky.CurrencyService.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\..\services\customer\src\Tasky.CustomerService.EntityFrameworkCore\Tasky.CustomerService.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\..\services\identity\src\Tasky.IdentityService.EntityFrameworkCore\Tasky.IdentityService.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\..\services\saas\src\Tasky.SaaS.EntityFrameworkCore\Tasky.SaaS.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\..\shared\Tasky.Microservice.Shared\Tasky.Microservice.Shared.csproj" />
