--- a/services/administration/host/Tasky.Administration.HttpApi.Host/appsettings.json
+++ b/services/administration/host/Tasky.Administration.HttpApi.Host/appsettings.json
@@ -6,7 +6,9 @@
     "SaaS": "Server=localhost;Database=TaskySaasService;Trusted_Connection=True;encrypt=false",
     "IdentityService": "Server=localhost;Database=TaskyIdentityService;Trusted_Connection=True;encrypt=false",
     "Administration": "Server=localhost;Database=TaskyAdministrationService;Trusted_Connection=True;encrypt=false",
-    "CurrencyService": "Server=localhost;Database=TaskyCurrencyService;Trusted_Connection=True;encrypt=false"
+    "CurrencyService": "Server=localhost;Database=TaskyCurrencyService;Trusted_Connection=True;encrypt=false",
+    "CustomerService": "Server=localhost;Database=TaskyCustomerService;Trusted_Connection=True;encrypt=false"
+
   },
   "RemoteServices": {
     "Default": {
