--- a/services/administration/src/Tasky.Administration.Application.Contracts/Tasky.Administration.Application.Contracts.csproj
+++ b/services/administration/src/Tasky.Administration.Application.Contracts/Tasky.Administration.Application.Contracts.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="7.0.2" />
         <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="7.0.2" />
         <ProjectReference Include="..\..\..\currency\src\Tasky.CurrencyService.Application.Contracts\Tasky.CurrencyService.Application.Contracts.csproj" />
+        <ProjectReference Include="..\..\..\customer\src\Tasky.CustomerService.Application.Contracts\Tasky.CustomerService.Application.Contracts.csproj" />
         <ProjectReference Include="..\Tasky.Administration.Domain.Shared\Tasky.Administration.Domain.Shared.csproj" />
     </ItemGroup>
 
