--- a/services/administration/src/Tasky.Administration.Application/Tasky.Administration.Application.csproj
+++ b/services/administration/src/Tasky.Administration.Application/Tasky.Administration.Application.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.0.2" />
         <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="7.0.2" />
         <ProjectReference Include="..\..\..\currency\src\Tasky.CurrencyService.HttpApi.Client\Tasky.CurrencyService.HttpApi.Client.csproj" />
+        <ProjectReference Include="..\..\..\customer\src\Tasky.CustomerService.HttpApi.Client\Tasky.CustomerService.HttpApi.Client.csproj" />
         <ProjectReference Include="..\Tasky.Administration.Application.Contracts\Tasky.Administration.Application.Contracts.csproj" />
         <ProjectReference Include="..\Tasky.Administration.Domain\Tasky.Administration.Domain.csproj" />
     </ItemGroup>
