--- a/services/customer/host/Tasky.CustomerService.HttpApi.Host/appsettings.json
+++ b/services/customer/host/Tasky.CustomerService.HttpApi.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "App": {
-    "CorsOrigins": "https://*.CustomerService.com,http://localhost:4200,http://localhost:44307,https://localhost:44307"
+    "CorsOrigins": "https://*.CustomerService.com,http://localhost:4200,https://localhost:5000,http://localhost:44307,https://localhost:44307"
   },
 
   "RemoteServices": {
