--- a/services/customer/src/Tasky.CustomerService.EntityFrameworkCore/Tasky.CustomerService.EntityFrameworkCore.csproj
+++ b/services/customer/src/Tasky.CustomerService.EntityFrameworkCore/Tasky.CustomerService.EntityFrameworkCore.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.2" />
     <ProjectReference Include="..\Tasky.CustomerService.Domain\Tasky.CustomerService.Domain.csproj" />
   </ItemGroup>
