--- a/services/remittance/host/Tasky.RemittanceService.HttpApi.Host/appsettings.json
+++ b/services/remittance/host/Tasky.RemittanceService.HttpApi.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "App": {
-    "CorsOrigins": "https://*.RemittanceService.com,http://localhost:4200,https://localhost:5000,http://localhost:44307,https://localhost:44307"
+    "CorsOrigins": "https://*.RemittanceService.com,http://localhost:4200,https://localhost:5000,http://localhost:44307,https://localhost:44307,https://localhost:7005,https://localhost:7006,https://localhost:7500"
   },
   "RemoteServices": {
     "Default": {
