--- a/services/currency/src/Tasky.CurrencyService.Application/Tasky.CurrencyService.Application.csproj
+++ b/services/currency/src/Tasky.CurrencyService.Application/Tasky.CurrencyService.Application.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.AutoMapper" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.0.2" />
+    <ProjectReference Include="..\..\..\remittance\src\Tasky.RemittanceService.HttpApi.Client\Tasky.RemittanceService.HttpApi.Client.csproj" />
     <ProjectReference Include="..\Tasky.CurrencyService.Application.Contracts\Tasky.CurrencyService.Application.Contracts.csproj" />
     <ProjectReference Include="..\Tasky.CurrencyService.Domain\Tasky.CurrencyService.Domain.csproj" />
   </ItemGroup>
