--- a/services/customer/src/Tasky.CustomerService.Application/Tasky.CustomerService.Application.csproj
+++ b/services/customer/src/Tasky.CustomerService.Application/Tasky.CustomerService.Application.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.AutoMapper" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.0.2" />
+    <ProjectReference Include="..\..\..\remittance\src\Tasky.RemittanceService.HttpApi.Client\Tasky.RemittanceService.HttpApi.Client.csproj" />
     <ProjectReference Include="..\Tasky.CustomerService.Application.Contracts\Tasky.CustomerService.Application.Contracts.csproj" />
     <ProjectReference Include="..\Tasky.CustomerService.Domain\Tasky.CustomerService.Domain.csproj" />
   </ItemGroup>
