--- a/services/aml/host/Tasky.AmlService.HttpApi.Host/appsettings.json
+++ b/services/aml/host/Tasky.AmlService.HttpApi.Host/appsettings.json
@@ -3,8 +3,8 @@
     "CorsOrigins": "https://*.AmlService.com,http://localhost:4200,https://localhost:5000,http://localhost:44307,https://localhost:44307,https://localhost:7005,https://localhost:7006,https://localhost:7007,https://localhost:7500"
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=TaskyAdministrationService;Trusted_Connection=True;encrypt=false",
-    "AmlService": "Server=localhost;Database=TaskyAmlService;Trusted_Connection=True;encrypt=false"
+    "Default": "Server=localhost;Database=TaskyAdministrationService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
+    "AmlService": "Server=localhost;Database=TaskyAmlService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false"
   },
   "RemoteServices": {
     "Default": {
