--- a/services/currency/host/Tasky.CurrencyService.HttpApi.Host/appsettings.json
+++ b/services/currency/host/Tasky.CurrencyService.HttpApi.Host/appsettings.json
@@ -8,8 +8,8 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=TaskyAdministrationService;Trusted_Connection=True;encrypt=false",
-    "CurrencyService": "Server=localhost;Database=TaskyCurrencyService;Trusted_Connection=True;encrypt=false"
+    "Default": "Server=localhost;Database=TaskyAdministrationService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
+    "CurrencyService": "Server=localhost;Database=TaskyCurrencyService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
