--- a/services/saas/host/Tasky.SaaS.HttpApi.Host/appsettings.json
+++ b/services/saas/host/Tasky.SaaS.HttpApi.Host/appsettings.json
@@ -3,8 +3,8 @@
     "CorsOrigins": "https://*.SaaS.com,http://localhost:4200,https://localhost:5000,http://localhost:44307,https://localhost:44307"
   },
   "ConnectionStrings": {
-    "SaaS": "Server=localhost;Database=TaskySaasService;Trusted_Connection=True;encrypt=false",
-    "Administration": "Server=localhost;Database=TaskyAdministrationService;Trusted_Connection=True;encrypt=false",
+    "SaaS": "Server=localhost;Database=TaskySaasService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
+    "Administration": "Server=localhost;Database=TaskyAdministrationService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
   },
   "Redis": {
     "Configuration": "127.0.0.1"
