--- a/services/remittance/src/Tasky.RemittanceService.EntityFrameworkCore/Tasky.RemittanceService.EntityFrameworkCore.csproj
+++ b/services/remittance/src/Tasky.RemittanceService.EntityFrameworkCore/Tasky.RemittanceService.EntityFrameworkCore.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.EventBus.RabbitMQ" Version="7.0.2" />
     <ProjectReference Include="..\Tasky.RemittanceService.Domain\Tasky.RemittanceService.Domain.csproj" />
   </ItemGroup>
 
