--- a/services/aml/host/Tasky.AmlService.HttpApi.Host/appsettings.json
+++ b/services/aml/host/Tasky.AmlService.HttpApi.Host/appsettings.json
@@ -12,8 +12,12 @@
     }
   },
   "Redis": {
-    "Configuration": "127.0.0.1"
+    "Configuration": "localhost:6379"
   },
+  "ElasticSearch": {
+    "Url": "http://localhost:9200"
+  },
+
   "AuthServer": {
     "Authority": "https://localhost:7600/",
     "RequireHttpsMetadata": "false",
