--- a/services/aml/src/Tasky.AmlService.EntityFrameworkCore/Tasky.AmlService.EntityFrameworkCore.csproj
+++ b/services/aml/src/Tasky.AmlService.EntityFrameworkCore/Tasky.AmlService.EntityFrameworkCore.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.EventBus.RabbitMQ" Version="7.0.2" />
+
     <ProjectReference Include="..\Tasky.AmlService.Domain\Tasky.AmlService.Domain.csproj" />
   </ItemGroup>
 
