--- a/services/remittance/host/Tasky.RemittanceService.HttpApi.Host/appsettings.json
+++ b/services/remittance/host/Tasky.RemittanceService.HttpApi.Host/appsettings.json
@@ -12,8 +12,12 @@
     "RemittanceService": "Server=localhost;Database=TaskyRemittanceService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false"
   },
   "Redis": {
-    "Configuration": "127.0.0.1"
+    "Configuration": "localhost:6379"
   },
+  "ElasticSearch": {
+    "Url": "http://localhost:9200"
+  },
+
   "AuthServer": {
     "Authority": "https://localhost:7600/",
     "RequireHttpsMetadata": "false",
