Revert "Commit Outbox-Inbox"
This reverts commit 519e1fe11a35705d2ed369b84d3760c97bb7a934.

--- a/services/aml/host/Tasky.AmlService.HttpApi.Host/appsettings.json
+++ b/services/aml/host/Tasky.AmlService.HttpApi.Host/appsettings.json
@@ -12,12 +12,8 @@
     }
   },
   "Redis": {
-    "Configuration": "localhost:6379"
+    "Configuration": "127.0.0.1"
   },
-  "ElasticSearch": {
-    "Url": "http://localhost:9200"
-  },
-
   "AuthServer": {
     "Authority": "https://localhost:7600/",
     "RequireHttpsMetadata": "false",
