--- a/services/administration/host/Tasky.Administration.HttpApi.Host/appsettings.json
+++ b/services/administration/host/Tasky.Administration.HttpApi.Host/appsettings.json
@@ -3,13 +3,13 @@
     "CorsOrigins": "https://*.Administration.com,http://localhost:4200,https://localhost:5000,http://localhost:44307,https://localhost:44307"
   },
   "ConnectionStrings": {
-    "SaaS": "Server=localhost;Database=TaskySaasService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
-    "IdentityService": "Server=localhost;Database=TaskyIdentityService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
-    "Administration": "Server=localhost;Database=TaskyAdministrationService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
-    "CurrencyService": "Server=localhost;Database=TaskyCurrencyService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
-    "CustomerService": "Server=localhost;Database=TaskyCustomerService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
-    "RemittanceService": "Server=localhost;Database=TaskyRemittanceService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
-    "AmlService": "Server=localhost;Database=TaskyAmlService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false"
+    "SaaS": "Server=localhost;Database=TaskySaasService;Trusted_Connection=True;encrypt=false",
+    "IdentityService": "Server=localhost;Database=TaskyIdentityService;Trusted_Connection=True;encrypt=false",
+    "Administration": "Server=localhost;Database=TaskyAdministrationService;Trusted_Connection=True;encrypt=false",
+    "CurrencyService": "Server=localhost;Database=TaskyCurrencyService;Trusted_Connection=True;encrypt=false",
+    "CustomerService": "Server=localhost;Database=TaskyCustomerService;Trusted_Connection=True;encrypt=false",
+    "RemittanceService": "Server=localhost;Database=TaskyRemittanceService;Trusted_Connection=True;encrypt=false",
+    "AmlService": "Server=localhost;Database=TaskyAmlService;Trusted_Connection=True;encrypt=false"
 
   },
   "RemoteServices": {
