--- a/services/customer/host/Tasky.CustomerService.HttpApi.Host/appsettings.json
+++ b/services/customer/host/Tasky.CustomerService.HttpApi.Host/appsettings.json
@@ -9,8 +9,8 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=TaskyAdministrationService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
-    "CustomerService": "Server=localhost;Database=TaskyCustomerService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false"
+    "Default": "Server=localhost;Database=TaskyAdministrationService;Trusted_Connection=True;encrypt=false",
+    "CustomerService": "Server=localhost;Database=TaskyCustomerService;Trusted_Connection=True;encrypt=false"
   },
 
 
