--- a/services/aml/host/Tasky.AmlService.HttpApi.Host/Dockerfile.original
+++ b/services/aml/host/Tasky.AmlService.HttpApi.Host/Dockerfile.original
@@ -5,7 +5,7 @@ EXPOSE 80
 FROM mcr.microsoft.com/dotnet/core/sdk:7.0 AS build
 WORKDIR /src
 COPY . .
-WORKDIR /src/templates/service/host/Tasky.CustomerService.HttpApi.Host
+WORKDIR /src/templates/service/host/Tasky.AmlService.HttpApi.Host
 RUN dotnet restore -nowarn:msb3202,nu1503
 RUN dotnet build --no-restore -c Release -o /app
 
@@ -15,4 +15,4 @@ RUN dotnet publish --no-restore -c Release -o /app
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "Tasky.CustomerService.HttpApi.Host.dll"]
+ENTRYPOINT ["dotnet", "Tasky.AmlService.HttpApi.Host.dll"]
