--- a/services/currency/host/Tasky.CurrencyService.HttpApi.Host/Tasky.CurrencyService.HttpApi.Host.csproj
+++ b/services/currency/host/Tasky.CurrencyService.HttpApi.Host/Tasky.CurrencyService.HttpApi.Host.csproj
@@ -8,9 +8,12 @@
     <RootNamespace>Tasky.CurrencyService</RootNamespace>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
     <UserSecretsId>Tasky.CurrencyService-c2d31439-b723-48e2-b061-5ebd7aeb6010</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="IdentityModel" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
