--- a/services/customer/host/Tasky.CustomerService.HttpApi.Host/Tasky.CustomerService.HttpApi.Host.csproj
+++ b/services/customer/host/Tasky.CustomerService.HttpApi.Host/Tasky.CustomerService.HttpApi.Host.csproj
@@ -8,9 +8,12 @@
     <RootNamespace>Tasky.CustomerService</RootNamespace>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
     <UserSecretsId>Tasky.CustomerService-c2d31439-b723-48e2-b061-5ebd7aeb6010</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="IdentityModel" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1" />
