--- a/services/remittance/host/Tasky.RemittanceService.HttpApi.Host/appsettings.json
+++ b/services/remittance/host/Tasky.RemittanceService.HttpApi.Host/appsettings.json
@@ -8,8 +8,8 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=TaskyAdministrationService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false",
-    "RemittanceService": "Server=localhost;Database=TaskyRemittanceService;User Id=sa;password=P@ssw0rd;Trusted_Connection=True;encrypt=false"
+    "Default": "Server=localhost;Database=TaskyAdministrationService;Trusted_Connection=True;encrypt=false",
+    "RemittanceService": "Server=localhost;Database=TaskyRemittanceService;Trusted_Connection=True;encrypt=false"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
