--- a/services/currency/host/Tasky.CurrencyService.HttpApi.Host/Tasky.CurrencyService.HttpApi.Host.csproj
+++ b/services/currency/host/Tasky.CurrencyService.HttpApi.Host/Tasky.CurrencyService.HttpApi.Host.csproj
@@ -11,6 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.7" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="IdentityModel" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
