--- a/services/currency/src/Tasky.CurrencyService.Application/Tasky.CurrencyService.Application.csproj
+++ b/services/currency/src/Tasky.CurrencyService.Application/Tasky.CurrencyService.Application.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.7" />
     <PackageReference Include="Volo.Abp.AutoMapper" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.0.2" />
     <ProjectReference Include="..\..\..\remittance\src\Tasky.RemittanceService.HttpApi.Client\Tasky.RemittanceService.HttpApi.Client.csproj" />
