--- a/services/currency/src/Tasky.CurrencyService.HttpApi.Client/Tasky.CurrencyService.HttpApi.Client.csproj
+++ b/services/currency/src/Tasky.CurrencyService.HttpApi.Client/Tasky.CurrencyService.HttpApi.Client.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.7" />
     <PackageReference Include="Volo.Abp.Http.Client" Version="7.0.2" />
     <ProjectReference Include="..\Tasky.CurrencyService.Application.Contracts\Tasky.CurrencyService.Application.Contracts.csproj" />
   </ItemGroup>
